--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <script>
         $(document).ready(function() {
             $('#fullpage').fullpage({
-                sectionsColor: ['#990033', '#4BBFC3', '#7BAABE', 'whitesmoke'],
+                sectionsColor: ['#990033', '#388eb6','#FFFFFF', '#7BAABE', 'whitesmoke'],
                 scrollingSpeed: 1000,
                 'navigation': true,
                 'navigationPosition': 'right',
-                'navigationTooltips': ['fullPage.js', 'Powerful', 'Amazing', 'Simple'],
+                'navigationTooltips': ['伊莱娅', '行业现状概况', '市场机会', 'Simple','什么名'],
             });
 
             $('body').mousemove(function(e){
@@ -57,22 +57,55 @@
             font-family: arial, helvetica, sans-serif;
         }
 
-        div.ele_01_photo,div.ele_01_title,div.ele_01_logo {
-            width: 10%; position: static;
+        .ele {
             transition:all 0.5s;transition-delay: 0.3s;
         }
 
-        .active div.ele_01_photo {
-            width: 40%;  margin: 0 30% 0 20%; transform: rotate(10deg) translateY(30%);
-            overflow: hidden; box-shadow: 0 0 25px #000; border: 10px solid #FFF;
-            transition:all 0.5s;transition-delay: 0.3s;}
-        .active div.ele_01_title {
-            width: 35%; margin: 0 35% 0 20%; transform: translateY(40%);
+        div.ele_01_photo,div.ele_01_title,div.ele_01_logo,
+        div.ele_02_title {
+            width: 10%; position: static;
+        }
+
+        div.ele_03_lineB,div.ele_03_lineR {
+            padding: 15px; color: #FFFFFF; margin: 10px 0; width: 40%;  font-family: "黑体";
+            overflow: hidden; transform: translateY(600%) rotate(-90deg);
+        }
+        div.ele_03_lineB { background-color: #00abeb;}
+        div.ele_03_lineR { background-color: #e84292; }
+        div.ele_03_lineB > span:first-child,div.ele_03_lineR > span:first-child {
+            font-size: 30pt; float: left; padding-right: 20pt; padding-left: 10pt; font-family: Constantia,helvetica;
+        }
+        div.ele_03_lineB > span:last-child,div.ele_03_lineR > span:last-child {
+            font-size: 10pt;
+        }
+
+        div.ele_02_text { width: 60%; margin: 5% auto 0 14%; font-size: 11pt; line-height: 30pt; padding: 3%; background-color: RGBA(255,255,255,0.5);  text-indent:2em; color: #002638; font-family: "黑体"; border-radius: 5px; opacity: 0;
+            transform: rotate(360deg);
             transition:all 0.5s;transition-delay: 0.3s;}
 
+        .active div.ele_01_photo {
+            width: 40%;  margin: 0 auto 0 20%; transform: rotate(10deg) translateY(30%);
+            overflow: hidden; box-shadow: 0 0 25px #000; border: 10px solid #FFF;}
+        .active div.ele_01_title {
+            width: 35%; margin: 0 auto 0 20%; transform: translateY(40%);}
+
         .active div.ele_01_logo {
-            width: 18%; margin: 0 35% 0 10%; transform: translateY(-220%) translateX(300%);
-            transition:all 0.5s;transition-delay: 0.3s;}
+            width: 18%; margin: 0 auto 0 10%; transform: translateY(-220%) translateX(300%);}
+
+        .active div.ele_02_title {
+            width: 50%; margin: 0 auto 0 10%; }
+
+        .active div.ele_02_text{
+            opacity: 1; transform: rotate(0deg); transition:all 1s;transition-delay: 0.3s;
+        }
+
+        .active div.ele_03_lineB,
+        .active div.ele_03_lineR {
+              transition:all 1s;
+        }
+
+        .active div.ele_03_lineB { transition-delay: 0.3s; transform: translateX(130%) translateY(0%) rotate(0deg); }
+        .active div.ele_03_lineR { transition-delay: 0.6s; transform: translateX(124%) translateY(0%) rotate(0deg); }
 
     </style>
 </head>
@@ -81,12 +114,26 @@
 <div id="footer">©&nbsp;广州彩怒莉化妆品有限公司</div>
 <div id="fullpage">
     <div class="section active">
-        <div  style="background-image: radial-gradient(#490119 5%, #650022 15%, #990033 80%);overflow: hidden;">
-        <div class="ele ele_01_photo"><div style="background-color: #FFFFFF; background-image: url(images/01/girl.png); background-size: cover; background-position: top center; padding-bottom:60%;"></div></div>
-        <div class="ele ele_01_title"><div style="background-image: url(images/01/title.png); background-size: cover; background-position: center center; padding-bottom:30%;"></div></div>
-        <div class="ele ele_01_logo"><div style="background-image: url(images/01/logo.png); background-size: cover; background-position: center center; padding-bottom:40%;"></div></div>
+        <div style="background-image: radial-gradient(#490119 10%, #650022 30%, #990033 60%);overflow: hidden;">
+            <div class="ele ele_01_photo"><div style="background-color: #FFFFFF; background-image: url(images/01/girl.png); background-size: cover; background-position: top center; padding-bottom:60%;"></div></div>
+            <div class="ele ele_01_title"><div style="background-image: url(images/01/title.png); background-size: cover; background-position: center center; padding-bottom:30%;"></div></div>
+            <div class="ele ele_01_logo"><div style="background-image: url(images/01/logo.png); background-size: cover; background-position: center center; padding-bottom:40%;"></div></div>
         </div>
     </div>
+    <div class="section">
+
+            <div class="ele ele_02_title"><div style="background-image: url(images/02/title.png); background-size: cover; background-position: center center; padding-bottom:15%;"></div></div>
+            <div class="ele ele_02_text">指甲油从诞生至今已经有两千年的历史，影响了全球一代又一代的爱美女性，经久不衰！指甲的修饰乃是女性美容的重要内容，以显示纤纤玉手的魅力。在欧美日韩，指甲油所赋予的“女性浓度”甚至在口红之上！</div>
+
+    </div>
+
+    <div class="section" style="background-image:url(images/03/bg.png); background-repeat: no-repeat; background-position: -20% bottom; background-size: 60%;">
+        <div class="ele ele_03_lineB"><span>1</span><span>行业未形成主要品牌格局，随着生活水平和健康意识的提升，消费者追求健康安全的高品质产品；</span></div>
+        <div class="ele ele_03_lineR"><span>2</span><span>流通产品主导市场，无区域保护、颜色多、瓶型多、品质良莠不齐，考验采购人员的专业度、采购成本高；</span></div>
+        <div class="ele ele_03_lineB"><span>3</span><span>消费群体稳定且对甲油类产品有较强的需求，随着泛90后成为消费主力，消费人群有逐年增加趋势；</span></div>
+        <div class="ele ele_03_lineR"><span>4</span><span>近几年，由于实体店受线上渠道的冲击且护肤、彩妆、个护等大类竞争剧烈，具有较强体验感的甲油产品越来越受关注；</span></div>
+    </div>
+
     <div class="section">
         <div class="slide">
 sdfsdf
@@ -96,7 +143,7 @@ sdfsdf
         <div class="slide"> Slide 4 </div>
     </div>
     <div class="section"> <h2>Slide 2</h2> </div>
-    <div class="section">Some section</div>
+
 </div>
 </body>
 </html>
