--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <script>
         $(document).ready(function() {
             $('#fullpage').fullpage({
-                sectionsColor: ['#990033', '#388eb6','#FFFFFF', '#7BAABE', 'whitesmoke'],
+                sectionsColor: ['#990033', '#388eb6','#FFFFFF', '#FFFFFF', '#FFFFFF','#FFFFFF','#FFFFFF'],
                 scrollingSpeed: 1000,
                 'navigation': true,
                 'navigationPosition': 'right',
-                'navigationTooltips': ['伊莱娅', '行业现状概况', '市场机会', 'Simple','什么名'],
+                'navigationTooltips': ['伊莱娅', '行业现状概况', '市场机会', '品牌定位','渠道定位','什么名'],
             });
 
             $('body').mousemove(function(e){
@@ -61,14 +61,38 @@
             transition:all 0.5s;transition-delay: 0.3s;
         }
 
+        /* Section 01 ====================================== */
         div.ele_01_photo,div.ele_01_title,div.ele_01_logo,
         div.ele_02_title {
             width: 10%; position: static;
         }
+        div.ele_01_photo { transform: rotate(360deg)  translateY(0%); }
+        .active div.ele_01_photo {
+            width: 40%;  margin: 0 auto 0 20%; transform: rotate(10deg) translateY(30%);
+            overflow: hidden; box-shadow: 0 0 25px #000; border: 10px solid #FFF;}
+        .active div.ele_01_title {
+            width: 35%; margin: 0 auto 0 20%; transform: translateY(40%);}
+        .active div.ele_01_logo {
+            width: 18%; margin: 0 auto 0 10%; transform: translateY(-220%) translateX(300%);}
+        /*------------------------------------------------------*/
 
+
+        /* Section 02 ======================================= */
+        div.ele_02_text { width: 60%; margin: 5% auto 0 14%; font-size: 11pt; line-height: 30pt; padding: 3%; background-color: RGBA(255,255,255,0.5);  text-indent:2em; color: #002638; font-family: "黑体"; border-radius: 5px; opacity: 0;
+            transform: rotate(360deg);
+            transition:all 0.5s;transition-delay: 0.3s;}
+        .active div.ele_02_title {
+            width: 50%; margin: 0 auto 0 10%; }
+        .active div.ele_02_text{
+            opacity: 1; transform: rotate(0deg); transition:all 1s;transition-delay: 0.3s;
+        }
+        /*----------------------------------------------------*/
+
+
+        /* Section 03 ======================================= */
         div.ele_03_lineB,div.ele_03_lineR {
             padding: 15px; color: #FFFFFF; margin: 10px 0; width: 40%;  font-family: "黑体";
-            overflow: hidden; transform: translateY(600%) rotate(-90deg);
+            overflow: hidden; transform: translateY(600%) rotate(-90deg); opacity: 0;
         }
         div.ele_03_lineB { background-color: #00abeb;}
         div.ele_03_lineR { background-color: #e84292; }
@@ -78,34 +102,40 @@
         div.ele_03_lineB > span:last-child,div.ele_03_lineR > span:last-child {
             font-size: 10pt;
         }
-
-        div.ele_02_text { width: 60%; margin: 5% auto 0 14%; font-size: 11pt; line-height: 30pt; padding: 3%; background-color: RGBA(255,255,255,0.5);  text-indent:2em; color: #002638; font-family: "黑体"; border-radius: 5px; opacity: 0;
-            transform: rotate(360deg);
-            transition:all 0.5s;transition-delay: 0.3s;}
-
-        .active div.ele_01_photo {
-            width: 40%;  margin: 0 auto 0 20%; transform: rotate(10deg) translateY(30%);
-            overflow: hidden; box-shadow: 0 0 25px #000; border: 10px solid #FFF;}
-        .active div.ele_01_title {
-            width: 35%; margin: 0 auto 0 20%; transform: translateY(40%);}
-
-        .active div.ele_01_logo {
-            width: 18%; margin: 0 auto 0 10%; transform: translateY(-220%) translateX(300%);}
-
-        .active div.ele_02_title {
-            width: 50%; margin: 0 auto 0 10%; }
-
-        .active div.ele_02_text{
-            opacity: 1; transform: rotate(0deg); transition:all 1s;transition-delay: 0.3s;
-        }
-
         .active div.ele_03_lineB,
         .active div.ele_03_lineR {
-              transition:all 1s;
+              transition:all 1s; opacity: 1;
         }
-
         .active div.ele_03_lineB { transition-delay: 0.3s; transform: translateX(130%) translateY(0%) rotate(0deg); }
         .active div.ele_03_lineR { transition-delay: 0.6s; transform: translateX(124%) translateY(0%) rotate(0deg); }
+        /*----------------------------------------------------*/
+
+
+        /* Section 04 ======================================= */
+        div.ele_04_left {width: 0%; height: 100%; float: left; background-color: #7dcdf4;}
+        div.ele_04_right {width: 100%; height: 100%; float: left; background-color: #ffffff;}
+        div.ele_04_house { position: relative;  top: 50%; transform:translateX(200%) translateY(-50%) rotate(180deg);opacity: 0; }
+        div.ele_04_text { width: 60%; height: 40%; position: relative;  top: 50%; transform:translateX(0%) translateY(-50%) rotate(0deg);opacity: 0; font-family: "黑体"; font-size: 11pt;   }
+        div.ele_04_text span { font-size: 15pt; color: #002638; display: block; padding-bottom: 5pt; }
+        .active div.ele_04_house { transform:translateX(30%) translateY(-50%) rotate(0deg); box-shadow: 0 0 5px 2px #999;opacity: 1;}
+        .active div.ele_04_text { transform:translateX(40%) translateY(-50%)  rotate(360deg);opacity: 1;  }
+        .active div.ele_04_left {width: 30%;}
+        .active div.ele_04_right {width: 70%;}
+        /*----------------------------------------------------*/
+
+
+        /* Section 05 ======================================= */
+        div.ele_05_left {width: 30%; height: 100%; float: left; background-color: #ffffff;}
+        div.ele_05_right {width: 70%; height: 100%; float: left; background-color: #ea639f; opacity: 0;}
+        div.ele_05_girl1 {  transform:translateX(200%) translateY(30%) rotate(-250deg);opacity: 0; }
+        div.ele_05_girl2 {  transform:translateX(200%) translateY(0%) rotate(-150deg);opacity: 0; }
+        div.ele_05_text { width: 60%; height: 40%; position: relative;  top: 50%; transform:translateX(0%) translateY(-50%) rotate(0deg);opacity: 0; font-family: "黑体"; font-size: 11pt; color: #FFFFFF;   }
+        div.ele_05_text span { font-size: 15pt; display: block; padding-bottom: 5pt; }
+        .active div.ele_05_text { transform:translateX(40%) translateY(-50%)  rotate(360deg);opacity: 1;  }
+        .active div.ele_05_girl1 { transform:translateX(90%) translateY(30%) rotate(25deg); box-shadow: 0 0 5px 2px #999;opacity: 1;}
+        .active div.ele_05_girl2 {transform:translateX(50%) translateY(0%) rotate(-15deg); box-shadow: 0 0 5px 2px #999;opacity: 1;}
+        .active div.ele_05_right { opacity: 1;}
+        /*----------------------------------------------------*/
 
     </style>
 </head>
@@ -132,6 +162,33 @@
         <div class="ele ele_03_lineR"><span>2</span><span>流通产品主导市场，无区域保护、颜色多、瓶型多、品质良莠不齐，考验采购人员的专业度、采购成本高；</span></div>
         <div class="ele ele_03_lineB"><span>3</span><span>消费群体稳定且对甲油类产品有较强的需求，随着泛90后成为消费主力，消费人群有逐年增加趋势；</span></div>
         <div class="ele ele_03_lineR"><span>4</span><span>近几年，由于实体店受线上渠道的冲击且护肤、彩妆、个护等大类竞争剧烈，具有较强体验感的甲油产品越来越受关注；</span></div>
+    </div>
+
+    <div class="section">
+        <div class="ele ele_04_left">
+            <div class="ele ele_04_house" style="background-image: url(images/04/house.png); border-radius: 50%; border: 5px solid #FFFFFF; background-size: cover; background-position: center center; padding-bottom:100%;"></div>
+        </div>
+        <div class="ele ele_04_right">
+            <div class="ele ele ele_04_text">
+                <p><span>品牌定位</span>大众化指甲油品牌。</p>
+                <p><span>品牌背景</span>为满足消费者对多样性和高性价比产品的追求、国内甲油品类专业厂商广州彩怒莉联合法国FIABILA、色彩权威机构美国潘通（Pantone）重新定义指尖色彩，精选经典、流行等最畅销色，满足不同消费者的需求。</p>
+                <p><span>品牌风格</span>活力，俏皮，热情，动感。</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="section">
+        <div class="ele ele_05_left">
+            <div class="ele ele_05_girl1" style=" width:50%; background-image: url(images/05/girl1.png); border: 5px solid #FFFFFF; background-size: cover; background-position: center center; padding-bottom:70%;"></div>
+            <div class="ele ele_05_girl2" style=" width:50%; background-image: url(images/05/girl2.png); border: 5px solid #FFFFFF; background-size: cover; background-position: center center; padding-bottom:70%; "></div>
+        </div>
+        <div class="ele ele_05_right">
+            <div class="ele ele_05_text">
+                <p><span>渠道定位</span>全国化妆品连锁渠道（百强连锁、知名饰品百货店）。</p>
+                <p><span>品牌愿景</span>帮助连锁门店解决甲油产品采购问题、降低采购成本，有效提升该品类在门店的销售占比，让消费者买到高性价比的优质甲油产品。</p>
+                <p><span>品牌广告语</span>玩出彩，秀出范！ </p>
+            </div>
+        </div>
     </div>
 
     <div class="section">
